@@ -3,6 +3,8 @@
 0.8.7i
 -feature: Add a reconnect capability when the server goes away
 -bug: Rework the way ping works.  Due to bad impact of 0.8.7h
+-bug: ICMP ping not working on windows due to cygwin change
+-bug: Linux Capabilities reported as on regardless of state
 
 0.8.7h
 -feature#0001852: Another 10% speedup in spine 
